chore(*): updated depenencies, styles dist and added npm publish scripts

--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "build:translations": "pnpm --filter=@invertase/firebaseui-translations run build",
     "build:react": "pnpm --filter=@invertase/firebaseui-react run build",
     "build:angular": "pnpm --filter=@invertase/firebaseui-angular run build",
-    "build:shadcn": "pnpm --filter=@invertase/firebaseui-shadcn run build",
-    "deploy": "pnpm --filter react run deploy && pnpm --filter nextjs run deploy && pnpm --filter angular-example run deploy",
+    "build:shadcn": "pnpm --filter=@firebase-ui/shadcn run build",
+    "build:examples": "pnpm run build && pnpm --filter react run build && pnpm --filter nextjs run build && pnpm --filter angular-example run build",
+    "build:all": "pnpm run build && pnpm run build:angular && pnpm run build:examples",
+    "deploy": "pnpm run build && pnpm --filter react run deploy && pnpm --filter nextjs run deploy && pnpm --filter angular-example run deploy",
     "deploy:react": "pnpm --filter react run deploy",
     "deploy:nextjs": "pnpm --filter nextjs run deploy",
     "deploy:angular": "pnpm --filter angular-example run deploy",
@@ -36,6 +38,12 @@
     "publish:tags:angular": "pnpm --filter=@invertase/firebaseui-angular run publish:tags",
     "publish:tags:styles": "pnpm --filter=@invertase/firebaseui-styles run publish:tags",
     "publish:tags:all": "pnpm i && pnpm run publish:tags:core && pnpm run publish:tags:translations && pnpm run publish:tags:react && pnpm run publish:tags:styles && pnpm run publish:tags:angular",
+    "publish:npm:core": "pnpm --filter=@invertase/firebaseui-core publish --access public",
+    "publish:npm:translations": "pnpm --filter=@invertase/firebaseui-translations publish --access public",
+    "publish:npm:react": "pnpm --filter=@invertase/firebaseui-react publish --access public",
+    "publish:npm:angular": "pnpm --filter=@invertase/firebaseui-angular publish --access public",
+    "publish:npm:styles": "pnpm --filter=@invertase/firebaseui-styles publish --access public",
+    "publish:npm:all": "pnpm run build:all && pnpm run publish:npm:core && pnpm run publish:npm:translations && pnpm run publish:npm:react && pnpm run publish:npm:styles && pnpm run publish:npm:angular",
     "release:core": "pnpm --filter=@invertase/firebaseui-core run release",
     "release:translations": "pnpm --filter=@invertase/firebaseui-translations run release",
     "release:react": "pnpm --filter=@invertase/firebaseui-react run release",
