--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -1,19 +1,19 @@
 {
   "name": "@invertase/firebaseui-styles",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "type": "module",
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
+      "style": "./dist/dist.min.css",
       "types": "./dist/index.d.ts",
-      "style": "./dist.css",
       "import": "./dist/index.js",
       "require": "./dist/index.cjs",
       "default": "./dist/index.js"
     },
-    "./dist.css": "./dist.css",
+    "./dist.min.css": "./dist/dist.min.css",
     "./tailwind": "./src/base.css",
     "./themes/*": "./src/themes/*.css"
   },
@@ -27,7 +27,7 @@
   "scripts": {
     "prepare": "pnpm run build",
     "build": "tsup && pnpm run build:css",
-    "build:css": "pnpm dlx @tailwindcss/cli -i ./src.css -o ./dist.css --minify",
+    "build:css": "pnpm dlx @tailwindcss/cli -i ./src.css -o ./dist/dist.min.css --minify",
     "build:local": "pnpm run build && pnpm pack",
     "lint": "tsc --noEmit",
     "format": "prettier --write \"src/**/*.ts\"",
