--- a/examples/shadcn/package.json
+++ b/examples/shadcn/package.json
@@ -5,12 +5,16 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview",
+    "deploy": "pnpm run build && firebase deploy --only hosting:fir-ui-shadcn",
     "shadcn:add-all": "tsx add-all.ts"
   },
   "dependencies": {
-    "@invertase/firebaseui-core": "0.0.3",
-    "@invertase/firebaseui-react": "0.0.3",
-    "@invertase/firebaseui-styles": "0.0.7",
+    "@invertase/firebaseui-react": "0.0.4",
+    "@invertase/firebaseui-core": "0.0.4",
+    "@invertase/firebaseui-styles": "0.0.9",
     "@invertase/firebaseui-translations": "0.0.4",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-accordion": "^1.2.12",
