--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -22,9 +22,11 @@ catalog:
   '@types/react': 19.1.16
   '@types/react-dom': 19.1.9
   '@vitejs/plugin-react': ^5.0.2
+  eslint: ^9.35.0
   firebase: ^11.10.0
   jsdom: ^26.1.0
   nanostores: ^1.0.1
+  prettier: ^3.6.2
   react: 19.1.1
   react-dom: 19.1.1
   rimraf: ^6.0.1
@@ -35,13 +37,7 @@ catalog:
   vite: ^7.1.5
   vitest: ^3.2.4
   vitest-tsconfig-paths: ^3.4.1
-
-  # Code quality
-  prettier: ^3.6.2
-  eslint: ^9.35.0
-
-  # Shared utilities
-  zod: ^4.1.9
+  zod: 4.1.12
   zone.js: ^0.15.0
 
 catalogs:
