--- a/examples/shadcn/firebase.json
+++ b/examples/shadcn/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "site": "fir-ui-shadcn",
+    "site": "fir-ui-2025-shadcn",
     "public": "dist",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "rewrites": [
