chore(*): release packages

--- a/package.json
+++ b/package.json
@@ -32,6 +32,12 @@
     "test:core:watch": "pnpm --filter=@invertase/firebaseui-core run test:unit:watch",
     "test:react:watch": "pnpm --filter=@invertase/firebaseui-react run test:unit:watch",
     "test:angular:watch": "pnpm --filter=@invertase/firebaseui-angular run test:watch",
+    "version:bump:core": "pnpm --filter=@invertase/firebaseui-core run version:bump",
+    "version:bump:translations": "pnpm --filter=@invertase/firebaseui-translations run version:bump",
+    "version:bump:react": "pnpm --filter=@invertase/firebaseui-react run version:bump",
+    "version:bump:angular": "pnpm --filter=@invertase/firebaseui-angular run version:bump",
+    "version:bump:styles": "pnpm --filter=@invertase/firebaseui-styles run version:bump",
+    "version:bump:all": "pnpm run version:bump:core && pnpm run version:bump:translations && pnpm run version:bump:react && pnpm run version:bump:styles && pnpm run version:bump:angular",
     "publish:tags:core": "pnpm --filter=@invertase/firebaseui-core run publish:tags",
     "publish:tags:translations": "pnpm --filter=@invertase/firebaseui-translations run publish:tags",
     "publish:tags:react": "pnpm --filter=@invertase/firebaseui-react run publish:tags",
