--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -50,7 +50,7 @@
     "firebase": "catalog:peerDependencies"
   },
   "dependencies": {
-    "@invertase/firebaseui-translations": "*",
+    "@invertase/firebaseui-translations": "workspace:*",
     "libphonenumber-js": "^1.12.23",
     "nanostores": "catalog:",
     "qrcode-generator": "^2.0.4",
