--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build:shadcn": "pnpm --filter=@firebase-ui/shadcn run build",
     "build:examples": "pnpm run build && pnpm --filter react run build && pnpm --filter nextjs run build && pnpm --filter angular-example run build",
     "build:all": "pnpm run build && pnpm run build:angular && pnpm run build:examples",
+    "build:packages": "pnpm run build && pnpm run build:angular",
     "deploy": "pnpm run build && pnpm --filter react run deploy && pnpm --filter nextjs run deploy && pnpm --filter angular-example run deploy",
     "deploy:react": "pnpm --filter react run deploy",
     "deploy:nextjs": "pnpm --filter nextjs run deploy",
@@ -50,7 +51,7 @@
     "publish:npm:react": "pnpm --filter=@invertase/firebaseui-react publish --access public",
     "publish:npm:angular": "pnpm --filter=@invertase/firebaseui-angular publish --access public",
     "publish:npm:styles": "pnpm --filter=@invertase/firebaseui-styles publish --access public",
-    "publish:npm:all": "pnpm run build:all && pnpm run publish:npm:core && pnpm run publish:npm:translations && pnpm run publish:npm:react && pnpm run publish:npm:styles && pnpm run publish:npm:angular",
+    "publish:npm:all": "pnpm install && pnpm run build:packages && pnpm run publish:npm:core && pnpm run publish:npm:translations && pnpm run publish:npm:react && pnpm run publish:npm:styles && pnpm run publish:npm:angular",
     "release:core": "pnpm --filter=@invertase/firebaseui-core run release",
     "release:translations": "pnpm --filter=@invertase/firebaseui-translations run release",
     "release:react": "pnpm --filter=@invertase/firebaseui-react run release",
