--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "deploy:react": "pnpm --filter react run deploy",
     "deploy:nextjs": "pnpm --filter nextjs run deploy",
     "deploy:angular": "pnpm --filter angular-example run deploy",
-    "shadcn:deploy": "pnpm run build:shadcn && firebase deploy --only hosting:fir-ui-shadcn",
+    "shadcn-example:deploy": "cd examples/shadcn && pnpm run build && firebase deploy --only hosting:fir-ui-shadcn",
+    "shadcn:deploy": "pnpm run build:shadcn && firebase deploy --only hosting:fir-ui-shadcn-registry",
     "lint:check": "eslint",
     "lint:fix": "eslint --fix",
     "format:check": "prettier --check **/{src,tests}/**/*.{ts,tsx}",
