--- a/packages/shadcn/package.json
+++ b/packages/shadcn/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsx build.ts --domain https://fir-ui-shadcn.web.app",
+    "build": "tsx build.ts --domain https://fir-ui-shadcn-registry.web.app",
     "preview": "vite preview",
     "test": "vitest run"
   },
