chore(*): upgrade angular example app

--- a/examples/angular/package.json
+++ b/examples/angular/package.json
@@ -32,10 +32,10 @@
     "@angular/platform-server": "^20.2.2",
     "@angular/router": "^20.2.2",
     "@angular/ssr": "^20.2.2",
-    "@invertase/firebaseui-angular": "0.0.3",
-    "@invertase/firebaseui-core": "0.0.3",
-    "@invertase/firebaseui-styles": "0.0.7",
-    "@invertase/firebaseui-translations": "0.0.4",
+    "@invertase/firebaseui-angular": "latest",
+    "@invertase/firebaseui-core": "latest",
+    "@invertase/firebaseui-styles": "latest",
+    "@invertase/firebaseui-translations": "latest",
     "@tailwindcss/postcss": "^4.0.6",
     "express": "^4.18.2",
     "postcss": "^8.5.2",
