--- a/examples/shadcn/package.json
+++ b/examples/shadcn/package.json
@@ -13,10 +13,10 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
-    "@invertase/firebaseui-core": "*",
-    "@invertase/firebaseui-react": "workspace:*",
-    "@invertase/firebaseui-styles": "*",
-    "@invertase/firebaseui-translations": "*",
+    "@invertase/firebaseui-core": "latest",
+    "@invertase/firebaseui-react": "latest",
+    "@invertase/firebaseui-styles": "latest",
+    "@invertase/firebaseui-translations": "latest",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
