chore(*): add deploy:all script

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "deploy:react": "pnpm --filter react run deploy",
     "deploy:nextjs": "pnpm --filter nextjs run deploy",
     "deploy:angular": "pnpm --filter angular-example run deploy",
-    "shadcn:deploy": "pnpm run build:shadcn && firebase deploy --only hosting:fir-ui-shadcn",
+    "deploy:shadcn": "pnpm run build:shadcn && firebase deploy --only hosting:fir-ui-shadcn",
+    "deploy:all": "pnpm run build && pnpm run build:shadcn && pnpm --filter react run deploy && pnpm --filter nextjs run deploy && pnpm --filter angular-example run deploy && pnpm --filter shadcn run deploy",
     "lint:check": "eslint",
     "lint:fix": "eslint --fix",
     "format:check": "prettier --check **/{src,tests}/**/*.{ts,tsx}",
