chore: Update repos with correct npm namespace

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:translations": "pnpm --filter=@invertase/firebaseui-translations run build",
     "build:react": "pnpm --filter=@invertase/firebaseui-react run build",
     "build:angular": "pnpm --filter=@invertase/firebaseui-angular run build",
-    "build:shadcn": "pnpm --filter=@firebase-ui/shadcn run build",
+    "build:shadcn": "pnpm --filter=@invertase/firebaseui-shadcn run build",
     "build:examples": "pnpm run build && pnpm --filter react run build && pnpm --filter nextjs run build && pnpm --filter angular-example run build",
     "build:all": "pnpm run build && pnpm run build:angular && pnpm run build:examples",
     "deploy": "pnpm run build && pnpm --filter react run deploy && pnpm --filter nextjs run deploy && pnpm --filter angular-example run deploy",
