chore: Sync shadc components + add pirate mode

--- a/examples/shadcn/package.json
+++ b/examples/shadcn/package.json
@@ -12,10 +12,10 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
-    "@invertase/firebaseui-core": "*",
+    "@invertase/firebaseui-core": "workspace:*",
     "@invertase/firebaseui-react": "workspace:*",
-    "@invertase/firebaseui-styles": "*",
-    "@invertase/firebaseui-translations": "*",
+    "@invertase/firebaseui-styles": "workspace:*",
+    "@invertase/firebaseui-translations": "workspace:*",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
