--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -13,10 +13,10 @@
     "deploy": "pnpm run build && firebase deploy --only hosting:fir-ui-rework-nextjs-ssg"
   },
   "dependencies": {
-    "@invertase/firebaseui-react": "latest",
-    "@invertase/firebaseui-core": "latest",
-    "@invertase/firebaseui-styles": "latest",
-    "@invertase/firebaseui-translations": "latest",
+    "@invertase/firebaseui-react": "workspace:*",
+    "@invertase/firebaseui-core": "workspace:*",
+    "@invertase/firebaseui-styles": "workspace:*",
+    "@invertase/firebaseui-translations": "workspace:*",
     "firebase": "catalog:",
     "next": "15.1.7",
     "react": "catalog:",
