--- a/examples/angular/firebase.json
+++ b/examples/angular/firebase.json
@@ -1,13 +1,7 @@
 {
   "hosting": {
     "site": "fir-ui-rework-angular",
-    "public": "dist/angular-ssr/browser",
-    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
-    ]
+    "source": ".",
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
   }
 }
