--- a/examples/angular/package.json
+++ b/examples/angular/package.json
@@ -18,7 +18,7 @@
     "lint:fix": "eslint . --ext .ts --fix",
     "format": "prettier --write \"src/**/*.{ts,html,css,scss}\"",
     "format:check": "prettier --check \"src/**/*.{ts,html,css,scss}\"",
-    "deploy": "pnpm run build && cp dist/angular-ssr/browser/index.csr.html dist/angular-ssr/browser/index.html && firebase deploy --only hosting:fir-ui-rework-angular"
+    "deploy": "pnpm run build && firebase deploy --only hosting:fir-ui-rework-angular"
   },
   "dependencies": {
     "@angular/animations": "^20.2.2",
@@ -45,7 +45,9 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^20.2.2",
+    "@angular-devkit/build-angular": "latest",
+    "@angular-devkit/core": "latest",
+    "@angular-devkit/architect": "latest",
     "@angular/cli": "^20.2.2",
     "@angular/compiler-cli": "^20.2.2",
     "@eslint/js": "^9.22.0",
@@ -57,6 +59,8 @@
     "eslint": "^9.22.0",
     "eslint-config-prettier": "^9.1.0",
     "firebase": "^11",
+    "jsonc-parser": "^3.2.0",
+    "vite": "^6.2.2",
     "vitest": "^3.2.0",
     "@vitest/ui": "^3.2.0",
     "@vitest/coverage-v8": "^3.2.0",
