--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "pnpm run build && firebase deploy --only hosting:fir-ui-2025-react"
+    "deploy": "pnpm run build && firebase deploy --only hosting:fir-ui-rework"
   },
   "dependencies": {
     "@invertase/firebaseui-react": "workspace:*",
