--- a/examples/nextjs-ssr/package.json
+++ b/examples/nextjs-ssr/package.json
@@ -28,6 +28,7 @@
     "@types/node": "^20",
     "@types/react": "19.1.16",
     "@types/react-dom": "19.1.9",
+    "vite": "catalog:",
     "postcss": "^8.5.2",
     "postcss-load-config": "^6.0.1",
     "tailwindcss": "^4.0.6",
