--- a/package.json
+++ b/package.json
@@ -4,22 +4,15 @@
   "type": "module",
   "scripts": {
     "emulators": "firebase emulators:start --only auth --project demo-test",
-    "build": "pnpm run build:translations && pnpm run build:styles && pnpm run build:core && pnpm run build:react",
+    "build": "pnpm run build:translations && pnpm run build:styles && pnpm run build:core && pnpm run build:react && pnpm run build:angular && pnpm run build:shadcn && pnpm --filter react run build && pnpm --filter nextjs run build && pnpm --filter nextjs-ssr run build && pnpm --filter angular-example run build && pnpm --filter shadcn run build",
     "build:core": "pnpm --filter=@invertase/firebaseui-core run build",
     "build:translations": "pnpm --filter=@invertase/firebaseui-translations run build",
     "build:styles": "pnpm --filter=@invertase/firebaseui-styles run build",
     "build:react": "pnpm --filter=@invertase/firebaseui-react run build",
     "build:angular": "pnpm --filter=@invertase/firebaseui-angular run build",
     "build:shadcn": "pnpm --filter=@invertase/firebaseui-shadcn run build",
-    "build:examples": "pnpm run build && pnpm --filter react run build && pnpm --filter nextjs run build && pnpm --filter angular-example run build",
-    "build:all": "pnpm run build && pnpm run build:angular && pnpm run build:examples",
-    "build:packages": "pnpm run build && pnpm run build:angular",
-    "deploy": "pnpm run build && pnpm --filter react run deploy && pnpm --filter nextjs run deploy && pnpm --filter angular-example run deploy",
-    "deploy:react": "pnpm --filter react run deploy",
-    "deploy:nextjs": "pnpm --filter nextjs run deploy",
-    "deploy:angular": "pnpm --filter angular-example run deploy",
-    "deploy:shadcn": "pnpm run build:shadcn && firebase deploy --only hosting:fir-ui-shadcn",
-    "deploy:all": "pnpm run build && pnpm run build:shadcn && pnpm --filter react run deploy && pnpm --filter nextjs run deploy && pnpm --filter angular-example run deploy && pnpm --filter shadcn run deploy",
+    "build:packages": "pnpm run build:translations && pnpm run build:styles && pnpm run build:core && pnpm run build:react && pnpm run build:angular",
+    "deploy:hosting:all": "pnpm run deploy",
     "lint:check": "eslint",
     "lint:fix": "eslint --fix",
     "format:check": "prettier --check **/{src,tests}/**/*.{ts,tsx}",
@@ -52,13 +45,7 @@
     "publish:npm:react": "pnpm --filter=@invertase/firebaseui-react publish --access public",
     "publish:npm:angular": "pnpm --filter=@invertase/firebaseui-angular publish --access public",
     "publish:npm:styles": "pnpm --filter=@invertase/firebaseui-styles publish --access public",
-    "publish:npm:all": "pnpm install && pnpm run build:packages && pnpm run publish:npm:core && pnpm run publish:npm:translations && pnpm run publish:npm:react && pnpm run publish:npm:styles && pnpm run publish:npm:angular",
-    "release:core": "pnpm --filter=@invertase/firebaseui-core run release",
-    "release:translations": "pnpm --filter=@invertase/firebaseui-translations run release",
-    "release:react": "pnpm --filter=@invertase/firebaseui-react run release",
-    "release:angular": "pnpm --filter=@invertase/firebaseui-angular run release",
-    "release:styles": "pnpm --filter=@invertase/firebaseui-styles run release",
-    "release:all": "pnpm i && pnpm run release:core && pnpm run release:translations && pnpm run release:react && pnpm run release:styles && pnpm run release:angular"
+    "publish:npm:all": "pnpm run build:packages && pnpm run publish:npm:core && pnpm run publish:npm:translations && pnpm run publish:npm:react && pnpm run publish:npm:styles && pnpm run publish:npm:angular"
   },
   "devDependencies": {
     "@eslint/css": "^0.11.1",
