chore(*): updated firebase json for shadcn

--- a/firebase.json
+++ b/firebase.json
@@ -15,7 +15,7 @@
     },
     {
       "site": "fir-ui-shadcn",
-      "source": "examples/shadcn",
+      "public": "examples/shadcn/dist",
       "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
       "rewrites": [
         {
