--- a/package.json
+++ b/package.json
@@ -4,47 +4,17 @@
   "type": "module",
   "scripts": {
     "emulators": "firebase emulators:start --only auth --project demo-test",
-    "build": "pnpm run build:translations && pnpm run build:styles && pnpm run build:core && pnpm run build:react && pnpm run build:angular && pnpm run build:shadcn && pnpm --filter react run build && pnpm --filter nextjs run build && pnpm --filter nextjs-ssr run build && pnpm --filter angular-example run build && pnpm --filter shadcn run build",
-    "build:core": "pnpm --filter=@invertase/firebaseui-core run build",
-    "build:translations": "pnpm --filter=@invertase/firebaseui-translations run build",
-    "build:styles": "pnpm --filter=@invertase/firebaseui-styles run build",
-    "build:react": "pnpm --filter=@invertase/firebaseui-react run build",
-    "build:angular": "pnpm --filter=@invertase/firebaseui-angular run build",
-    "build:shadcn": "pnpm --filter=@invertase/firebaseui-shadcn run build",
-    "build:packages": "pnpm run build:translations && pnpm run build:styles && pnpm run build:core && pnpm run build:react && pnpm run build:angular",
-    "deploy:hosting:all": "pnpm run deploy",
+    "build": "pnpm --filter=@invertase/firebaseui-translations run build && pnpm --filter=@invertase/firebaseui-styles run build && pnpm --filter=@invertase/firebaseui-core run build && pnpm --filter=@invertase/firebaseui-react run build && pnpm --filter=@invertase/firebaseui-angular run build && pnpm --filter=@invertase/firebaseui-shadcn run build && pnpm --filter react run build && pnpm --filter nextjs run build && pnpm --filter nextjs-ssr run build && pnpm --filter angular-example run build && pnpm --filter shadcn run build",
+    "build:packages": "pnpm --filter=@invertase/firebaseui-translations run build && pnpm --filter=@invertase/firebaseui-styles run build && pnpm --filter=@invertase/firebaseui-core run build && pnpm --filter=@invertase/firebaseui-react run build && pnpm --filter=@invertase/firebaseui-angular run build",
+    "deploy:hosting:all": "pnpm run build && pnpm --filter react run deploy && pnpm --filter nextjs run deploy && pnpm --filter nextjs-ssr run deploy && pnpm --filter angular-example run deploy && pnpm --filter shadcn run deploy",
     "lint:check": "eslint",
     "lint:fix": "eslint --fix",
     "format:check": "prettier --check **/{src,tests}/**/*.{ts,tsx}",
     "format:write": "prettier --write **/{src,tests}/**/*.{ts,tsx}",
-    "test": "pnpm run test:core && pnpm run test:translations && pnpm run test:styles && pnpm run test:react && pnpm run test:shadcn && pnpm run test:angular",
-    "test:core": "pnpm --filter=@invertase/firebaseui-core run test",
-    "test:react": "pnpm --filter=@invertase/firebaseui-react run test",
-    "test:angular": "pnpm --filter=@invertase/firebaseui-angular run test",
-    "test:translations": "pnpm --filter=@invertase/firebaseui-translations run test",
-    "test:styles": "pnpm --filter=@invertase/firebaseui-styles run test",
-    "test:shadcn": "pnpm --filter=@invertase/firebaseui-shadcn run test",
-    "test:watch": "pnpm run test:core:watch & pnpm run test:react:watch & pnpm run test:angular:watch",
-    "test:core:watch": "pnpm --filter=@invertase/firebaseui-core run test:unit:watch",
-    "test:react:watch": "pnpm --filter=@invertase/firebaseui-react run test:unit:watch",
-    "test:angular:watch": "pnpm --filter=@invertase/firebaseui-angular run test:watch",
-    "version:bump:core": "pnpm --filter=@invertase/firebaseui-core run version:bump",
-    "version:bump:translations": "pnpm --filter=@invertase/firebaseui-translations run version:bump",
-    "version:bump:react": "pnpm --filter=@invertase/firebaseui-react run version:bump",
-    "version:bump:angular": "pnpm --filter=@invertase/firebaseui-angular run version:bump",
-    "version:bump:styles": "pnpm --filter=@invertase/firebaseui-styles run version:bump",
-    "version:bump:all": "pnpm run version:bump:core && pnpm run version:bump:translations && pnpm run version:bump:react && pnpm run version:bump:styles && pnpm run version:bump:angular",
-    "publish:tags:core": "pnpm --filter=@invertase/firebaseui-core run publish:tags",
-    "publish:tags:translations": "pnpm --filter=@invertase/firebaseui-translations run publish:tags",
-    "publish:tags:react": "pnpm --filter=@invertase/firebaseui-react run publish:tags",
-    "publish:tags:angular": "pnpm --filter=@invertase/firebaseui-angular run publish:tags",
-    "publish:tags:styles": "pnpm --filter=@invertase/firebaseui-styles run publish:tags",
-    "publish:tags:all": "pnpm i && pnpm run publish:tags:core && pnpm run publish:tags:translations && pnpm run publish:tags:react && pnpm run publish:tags:styles && pnpm run publish:tags:angular",
-    "publish:npm:core": "pnpm --filter=@invertase/firebaseui-core publish --access public",
-    "publish:npm:translations": "pnpm --filter=@invertase/firebaseui-translations publish --access public",
-    "publish:npm:react": "pnpm --filter=@invertase/firebaseui-react publish --access public",
-    "publish:npm:angular": "pnpm --filter=@invertase/firebaseui-angular publish --access public",
-    "publish:npm:styles": "pnpm --filter=@invertase/firebaseui-styles publish --access public",
+    "test": "pnpm --filter=@invertase/firebaseui-core run test && pnpm --filter=@invertase/firebaseui-translations run test && pnpm --filter=@invertase/firebaseui-styles run test && pnpm --filter=@invertase/firebaseui-react run test && pnpm --filter=@invertase/firebaseui-shadcn run test && pnpm --filter=@invertase/firebaseui-angular run test",
+    "test:watch": "pnpm --filter=@invertase/firebaseui-core run test:unit:watch & pnpm --filter=@invertase/firebaseui-react run test:unit:watch & pnpm --filter=@invertase/firebaseui-angular run test:watch",
+    "version:bump:all": "pnpm --filter=@invertase/firebaseui-core run version:bump && pnpm --filter=@invertase/firebaseui-translations run version:bump && pnpm --filter=@invertase/firebaseui-react run version:bump && pnpm --filter=@invertase/firebaseui-styles run version:bump && pnpm --filter=@invertase/firebaseui-angular run version:bump",
+    "publish:tags:all": "pnpm i && pnpm --filter=@invertase/firebaseui-core run publish:tags && pnpm --filter=@invertase/firebaseui-translations run publish:tags && pnpm --filter=@invertase/firebaseui-react run publish:tags && pnpm --filter=@invertase/firebaseui-styles run publish:tags && pnpm --filter=@invertase/firebaseui-angular run publish:tags",
     "publish:npm:all": "pnpm run build:packages && pnpm run publish:npm:core && pnpm run publish:npm:translations && pnpm run publish:npm:react && pnpm run publish:npm:styles && pnpm run publish:npm:angular"
   },
   "devDependencies": {
