--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -33,6 +33,7 @@
     "test:integration:watch": "vitest tests/integration",
     "version:bump": "pnpm version patch",
     "publish:tags": "sh -c 'TAG=\"${npm_package_name}@${npm_package_version}\"; git tag --list \"$TAG\" | grep . || git tag \"$TAG\"; git push origin \"$TAG\"'",
+    "publish:npm": "pnpm publish --access public",
     "release": "pnpm run build && pnpm pack --pack-destination --pack-destination ../../releases/"
   },
   "peerDependencies": {
