--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -32,7 +32,7 @@ catalog:
   rimraf: ^6.0.1
   rxjs: ^7.8.2
   tailwindcss: ^4.1.13
-  tsup: ^8.5.0
+  tsup: 8.5.0
   typescript: ^5.9.2
   vite: ^7.1.5
   vitest: ^3.2.4
