--- a/packages/shadcn/package.json
+++ b/packages/shadcn/package.json
@@ -7,6 +7,7 @@
     "dist"
   ],
   "scripts": {
+    "prepare": "pnpm run build",
     "dev": "vite",
     "build": "tsup && tsx build.ts --domain https://fir-ui-shadcn-registry.web.app",
     "preview": "vite preview",
