--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,6 +3,9 @@ availableSecrets:
     - versionName: projects/895878195922/secrets/FirebaseUI_NPM_Publish_Token/versions/latest
       env: "NPM_TOKEN"
 
+options:
+  logging: CLOUD_LOGGING_ONLY
+
 steps:
   - name: "node:22"
     entrypoint: "bash"
