turn off pnpm git checks, they were causing the CI publish to fail

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,25 +3,25 @@ packages:
   - examples/*
 
 catalog:
-  '@angular-devkit/build-angular': ^20.2.2
-  '@angular/cli': ^20.2.2
-  '@angular/common': ^20.2.2
-  '@angular/compiler': ^20.2.2
-  '@angular/compiler-cli': ^20.2.2
-  '@angular/core': ^20.2.2
-  '@angular/fire': ^20.0.1
-  '@angular/forms': ^20.2.2
-  '@angular/platform-browser': ^20.2.2
-  '@angular/platform-browser-dynamic': ^20.2.2
-  '@angular/router': ^20.2.2
-  '@tailwindcss/vite': ^4.1.14
-  '@testing-library/jest-dom': ^6.8.0
-  '@testing-library/react': ^16.3.0
-  '@types/jsdom': ^21.1.7
-  '@types/node': ^24.3.1
-  '@types/react': 19.1.16
-  '@types/react-dom': 19.1.9
-  '@vitejs/plugin-react': ^5.0.2
+  "@angular-devkit/build-angular": ^20.2.2
+  "@angular/cli": ^20.2.2
+  "@angular/common": ^20.2.2
+  "@angular/compiler": ^20.2.2
+  "@angular/compiler-cli": ^20.2.2
+  "@angular/core": ^20.2.2
+  "@angular/fire": ^20.0.1
+  "@angular/forms": ^20.2.2
+  "@angular/platform-browser": ^20.2.2
+  "@angular/platform-browser-dynamic": ^20.2.2
+  "@angular/router": ^20.2.2
+  "@tailwindcss/vite": ^4.1.14
+  "@testing-library/jest-dom": ^6.8.0
+  "@testing-library/react": ^16.3.0
+  "@types/jsdom": ^21.1.7
+  "@types/node": ^24.3.1
+  "@types/react": 19.1.16
+  "@types/react-dom": 19.1.9
+  "@vitejs/plugin-react": ^5.0.2
   eslint: ^9.35.0
   firebase: ^11.10.0
   jsdom: ^26.1.0
@@ -42,15 +42,17 @@ catalog:
 
 catalogs:
   peerDependencies:
-    '@angular/fire': ^20
+    "@angular/fire": ^20
     firebase: ^11 || ^12
     react: ^19
     react-dom: ^19
 
 onlyBuiltDependencies:
-  - '@parcel/watcher'
+  - "@parcel/watcher"
   - esbuild
   - lmdb
   - msgpackr-extract
   - protobufjs
   - sharp
+
+gitChecks: false
