set version and tag dynamically based on tag or commit

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test:watch": "pnpm --filter=@firebase-oss/ui-core run test:unit:watch & pnpm --filter=@firebase-oss/ui-react run test:unit:watch & pnpm --filter=@firebase-oss/ui-angular run test:watch",
     "version:bump:all": "pnpm --filter=@firebase-oss/ui-core run version:bump && pnpm --filter=@firebase-oss/ui-translations run version:bump && pnpm --filter=@firebase-oss/ui-react run version:bump && pnpm --filter=@firebase-oss/ui-styles run version:bump && pnpm --filter=@firebase-oss/ui-angular run version:bump",
     "publish:tags:all": "pnpm i && pnpm --filter=@firebase-oss/ui-core run publish:tags && pnpm --filter=@firebase-oss/ui-translations run publish:tags && pnpm --filter=@firebase-oss/ui-react run publish:tags && pnpm --filter=@firebase-oss/ui-styles run publish:tags && pnpm --filter=@firebase-oss/ui-angular run publish:tags",
-    "publish:npm:all": "pnpm --filter=@firebase-oss/ui-translations run publish:npm && pnpm --filter=@firebase-oss/ui-styles run publish:npm && pnpm --filter=@firebase-oss/ui-core run publish:npm && pnpm --filter=@firebase-oss/ui-react run publish:npm && pnpm --filter=@firebase-oss/ui-angular run publish:npm"
+    "publish:npm:all": "pnpm --filter=@firebase-oss/ui-* run publish:npm"
   },
   "devDependencies": {
     "@eslint/css": "^0.11.1",
