build seems to generate .mjs, not .js

--- a/packages/shadcn/package.json
+++ b/packages/shadcn/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "type": "module",
   "bin": {
-    "ui-shadcn": "dist/bin/cli.js"
+    "ui-shadcn": "dist/bin/cli.mjs"
   },
   "files": [
     "dist"
