--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -3,7 +3,7 @@ name: Lint and Format Check
 on:
   push:
     branches:
-      - "@invertase/v7-development"
+      - main
   pull_request:
 
 jobs:
