chore: Update react minimum versions

--- a/examples/nextjs-ssr/package.json
+++ b/examples/nextjs-ssr/package.json
@@ -18,16 +18,16 @@
     "@firebase-oss/ui-styles": "workspace:*",
     "@firebase-oss/ui-translations": "workspace:*",
     "firebase": "^11.10.0",
-    "next": "15.1.7",
-    "react": "19.2.1",
-    "react-dom": "19.2.1",
+    "next": "15.1.11",
+    "react": "catalog:",
+    "react-dom": "catalog:",
     "server-only": "^0.0.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.6",
     "@types/node": "^20",
-    "@types/react": "19.2.7",
-    "@types/react-dom": "19.2.3",
+    "@types/react": "catalog:",
+    "@types/react-dom": "catalog:",
     "vite": "catalog:",
     "postcss": "^8.5.2",
     "postcss-load-config": "^6.0.1",
