fix(core): upgrade to nanostores deepmap

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -52,6 +52,7 @@
   },
   "dependencies": {
     "@firebase-oss/ui-translations": "workspace:*",
+    "@nanostores/deepmap": "catalog:",
     "libphonenumber-js": "^1.12.23",
     "nanostores": "catalog:",
     "qrcode-generator": "^2.0.4",
