--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -21,11 +21,13 @@ catalog:
   "@types/node": ^24.3.1
   "@types/react": 19.2.7
   "@types/react-dom": 19.2.3
+  "@nanostores/deepmap": ^0.0.1
   "@vitejs/plugin-react": ^5.0.2
   eslint: ^9.35.0
   firebase: ^11.10.0
   jsdom: ^26.1.0
-  nanostores: ^1.0.1
+  nanostores: ^1.1.0
+
   prettier: ^3.6.2
   react: 19.2.1
   react-dom: 19.2.1
